--- a/style/css/style.css
+++ b/style/css/style.css
@@ -332,27 +332,31 @@ template {
 .section-header-contacts .contacts-time .contacts-text .contacts-title, .section-header-contacts .contacts-phone .contacts-text .contacts-title {
   font-style: normal;
   font-weight: normal;
-  font-size: 12px;
+  font-size: 8px;
   color: #2E363E;
   opacity: 0.8; }
 
 .section-header-contacts .contacts-time .contacts-text .contacts-subtitle, .section-header-contacts .contacts-phone .contacts-text .contacts-subtitle {
-  margin-top: 10px;
-  font-size: 18px;
+  margin-top: 6.6px;
+  font-size: 12px;
   color: #2E363E;
   opacity: 0.8; }
 
 .section-header-contacts .contacts-time .gps, .section-header-contacts .contacts-phone .phone {
-  margin-right: 15px; }
+  margin-right: 10px; }
   .section-header-contacts .contacts-time .gps img, .section-header-contacts .contacts-phone .phone img {
-    width: 25px;
-    height: 25px; }
+    width: 16.6px;
+    height: 16.6px; }
 
 body {
   font-family: 'Gilroy',sans-serif; }
 
+.section-outer {
+  padding-right: 20px;
+  padding-left: 20px; }
+
 .section-inner {
-  max-width: 1800px;
+  max-width: 1200px;
   margin: 0 auto; }
 
 .section-header-nav {
@@ -362,53 +366,71 @@ body {
   background-color: #4659db;
   font-family: 'Gilroy-SemiBold', sans-serif; }
   .section-header-nav .nav-item {
-    padding: 25px 35px;
+    padding: 16px 23px;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 8px;
     border-left: 1px solid #3f52cd;
     border-right: 1px solid #3f52cd; }
   .section-header-nav .item-3 {
-    padding-right: 100px; }
+    padding-right: 66px; }
   .section-header-nav .active {
     background-color: #3f52cd; }
   .section-header-nav .button {
     display: flex;
     align-items: center;
-    padding-right: 310px;
+    padding-right: 206px;
     background-color: #f5db7c;
     border: none;
     color: #2E363E; }
     .section-header-nav .button img {
-      width: 17.5px;
-      height: 17.5px;
-      margin-right: 13px; }
+      width: 11.6px;
+      height: 11.6px;
+      margin-right: 8.6px; }
+  @media (max-width: 767px) {
+    .section-header-nav {
+      flex-direction: column; }
+      .section-header-nav .nav-item {
+        border: none;
+        display: flex;
+        justify-content: center;
+        border-bottom: 1px solid #3F52CD;
+        padding: 20px 0;
+        width: 100%; } }
+  @media (max-width: 991px) {
+    .section-header-nav {
+      flex-direction: column; }
+      .section-header-nav .nav-item {
+        border: none;
+        display: flex;
+        justify-content: center;
+        border-bottom: 1px solid #3F52CD;
+        padding: 20px 0; }
+      .section-header-nav .button {
+        border: none; } }
 
 .section-header-contacts {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 50px 340px; }
+  display: flex; }
   .section-header-contacts .contacts-item {
     display: flex; }
   .section-header-contacts .contacts-logo {
-    margin-right: 65px;
+    margin-right: 28.8px;
     white-space: nowrap; }
     .section-header-contacts .contacts-logo .logo {
-      margin-right: 18px; }
+      margin-right: 8px; }
       .section-header-contacts .contacts-logo .logo img {
-        width: 60px;
-        height: 60px; }
+        width: 26.6px;
+        height: 26.6px; }
     .section-header-contacts .contacts-logo .contacts-text .contacts-title {
       color: #3f52cd;
-      font-size: 12px; }
+      font-size: 8px; }
     .section-header-contacts .contacts-logo .contacts-text .contacts-subtitle {
-      margin-top: 10px; }
+      margin-top: 6.6px; }
       .section-header-contacts .contacts-logo .contacts-text .contacts-subtitle img {
-        width: 150px;
-        height: 22px; }
+        width: 100px;
+        height: 14.6px; }
   .section-header-contacts .contacts-time {
     align-items: center;
-    margin-right: 66px;
+    margin-right: 44px;
     white-space: nowrap; }
     .section-header-contacts .contacts-time .contacts-text .contacts-subtitle {
       font-family: 'Gilroy', sans-serif; }
@@ -423,46 +445,72 @@ body {
     align-items: center; }
     .section-header-contacts .contacts-social .vk {
       background-color: #eff3f5;
-      padding: 16px 20px 16px 20px;
-      margin-right: 4px; }
+      padding: 10.6px 13.3px;
+      margin-right: 2.6px; }
       .section-header-contacts .contacts-social .vk img {
-        width: 25px;
-        height: 13px; }
+        width: 16.6px;
+        height: 8.6px; }
     .section-header-contacts .contacts-social .instagram {
       background-color: #eff3f5;
-      padding: 15px 21px;
-      margin-right: 4px; }
+      padding: 10.3px 14px;
+      margin-right: 2.6px; }
       .section-header-contacts .contacts-social .instagram img {
-        width: 17px;
-        height: 16px; }
+        width: 11.3px;
+        height: 10.6px; }
     .section-header-contacts .contacts-social .whatsapp {
       background-color: #eff3f5;
-      padding: 13px 20px 14px 20px; }
+      padding: 10.6px 13.3px; }
       .section-header-contacts .contacts-social .whatsapp img {
-        width: 20px;
-        height: 19px; }
+        width: 13.3px;
+        height: 12.6px; }
+  @media (max-width: 767px) {
+    .section-header-contacts {
+      flex-direction: column;
+      align-items: flex-start;
+      margin: 0;
+      padding: 20px 0; }
+      .section-header-contacts .contacts-item {
+        margin-bottom: 20px; }
+      .section-header-contacts .contacts-social {
+        margin: 0 auto; } }
+  @media (min-width: 768px) {
+    .section-header-contacts {
+      justify-content: center;
+      padding-top: 20px;
+      padding-bottom: 20px; }
+      .section-header-contacts .contacts-item {
+        margin-right: 15px; }
+      .section-header-contacts .contacts-social {
+        margin: 0; } }
+  @media (max-width: 991px) {
+    .section-header-contacts {
+      justify-content: space-around; } }
+  @media (min-width: 1200px) {
+    .section-header-contacts {
+      padding: 22.2px 151px;
+      align-items: center;
+      justify-content: space-around; } }
 
 .section-promo .section-inner {
   background-color: #eff3f5;
-  padding-top: 10px; }
+  padding-top: 6.6px; }
 
 .section-promo-video {
-  background-image: url("../img/promo-video.png");
-  height: 523px;
-  max-width: 1800px;
+  background: url("../img/promo-video.png") 50% 50%;
+  height: 348.6px;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center; }
   .section-promo-video .button img {
-    width: 24px;
-    height: 25px;
-    padding: 18px 22px;
+    width: 16px;
+    height: 16.6px;
+    padding: 12px 14.6px;
     background-color: #f5db7c; }
 
 .section-founder-container {
   background-color: #eff3f5;
-  padding: 95px 0;
+  padding: 63.3px 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -474,7 +522,7 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    padding: 45px 98px 43.5px 30px;
+    padding: 30px 65.3px 29px 20px;
     position: relative; }
     .section-founder-container .founder-item::after {
       content: '';
@@ -489,18 +537,41 @@ body {
     .section-founder-container .founder-item .founder-title {
       font-style: normal;
       font-weight: lighter;
-      font-size: 60px;
       color: #3F52CD; }
     .section-founder-container .founder-item .active {
       font-family: 'Gilroy-extrabold',sans-serif;
-      font-size: 60px;
+      font-size: 40px;
       color: #3F52CD; }
     .section-founder-container .founder-item .founder-subtitle {
-      margin-top: 37px;
+      margin-top: 24.6px;
       font-style: normal;
-      font-size: 19px;
       color: #201E30;
-      line-height: 28px; }
+      line-height: 12.6px; }
+  @media (max-width: 767px) {
+    .section-founder-container {
+      flex-direction: column;
+      align-items: center;
+      padding: 20px 0; }
+      .section-founder-container .founder-item {
+        width: 195px;
+        align-items: center;
+        margin-bottom: 20px; }
+        .section-founder-container .founder-item .founder-title {
+          font-size: 40px; }
+        .section-founder-container .founder-item .founder-subtitle {
+          line-height: 15px;
+          font-size: 12px; } }
+  @media (min-width: 768px) {
+    .section-founder-container .founder-item .founder-title {
+      font-size: 25px; }
+    .section-founder-container .founder-item .founder-subtitle {
+      font-size: 10px;
+      line-height: 20px; } }
+  @media (min-width: 1200px) {
+    .section-founder-container .founder-item .founder-title {
+      font-size: 40px; }
+    .section-founder-container .founder-item .founder-subtitle {
+      font-size: 12.6px; } }
 
 .section-main-container {
   display: flex;
@@ -508,55 +579,75 @@ body {
   align-items: center;
   background-color: #eff3f5; }
   .section-main-container .section-main-items {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     width: 100%; }
     .section-main-container .section-main-items .main-item {
       display: flex;
-      justify-content: space-evenly;
       align-items: center;
-      padding: 90.5px 0;
+      padding: 60.3px 0;
       background-color: #ffffff;
-      white-space: pre-line;
-      margin-bottom: 2px; }
+      margin-bottom: 1.3px; }
       .section-main-container .section-main-items .main-item .main-logo img {
-        max-width: 439px; }
+        max-width: 292px; }
       .section-main-container .section-main-items .main-item .main-text {
         display: flex;
-        flex-direction: column;
-        align-items: flex-start; }
+        flex-direction: column; }
         .section-main-container .section-main-items .main-item .main-text .main-title {
           font-family: 'Gilroy extrabold', sans-serif;
           font-style: normal;
           font-weight: bold;
-          font-size: 46px;
-          line-height: 54px;
+          font-size: 30.6px;
+          line-height: 36px;
           color: #2E363E;
-          margin-bottom: 59px; }
+          margin-bottom: 39.3px; }
         .section-main-container .section-main-items .main-item .main-text .main-subtitle {
-          font-size: 18px;
-          line-height: 30px;
+          font-size: 12px;
+          line-height: 20px;
           color: #201E30;
           opacity: 0.8;
-          margin-bottom: 51px; }
+          margin-bottom: 34px; }
         .section-main-container .section-main-items .main-item .main-text .main-button {
           display: flex;
           align-items: center;
-          max-width: 216px;
+          max-width: 144px;
           background-color: #f5db7c;
-          font-size: 12px;
-          padding: 19px 38px 17px 35px;
+          font-size: 8px;
+          padding: 12.6px 25.3px 11.3px 23.3px;
           font-family: 'Gilroy extrabold', sans-serif; }
           .section-main-container .section-main-items .main-item .main-text .main-button img {
-            margin-right: 14px;
-            max-width: 9px;
+            margin-right: 9.3px;
+            max-width: 6px;
             height: auto; }
+  @media (min-width: 768px) {
+    .section-main-container .main-logo {
+      display: none; } }
+  @media (max-width: 991px) {
+    .section-main-container .main-item {
+      justify-content: center; }
+    .section-main-container .main-text {
+      margin: 0 auto;
+      width: 60%; }
+    .section-main-container .main-logo {
+      display: none; } }
+  @media (min-width: 992px) {
+    .section-main-container .main-item {
+      justify-content: space-evenly;
+      white-space: pre-line; }
+    .section-main-container .main-logo {
+      display: block; } }
+  @media (min-width: 1200px) {
+    .section-main-container .main-item {
+      justify-content: space-evenly;
+      white-space: pre-line; }
+    .section-main-container .main-text {
+      align-items: flex-start; } }
 
 .footer-container {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   background-color: #4659db;
-  padding: 60px 0;
+  padding: 40px 0;
   position: relative; }
   .footer-container::after {
     content: '';
@@ -570,16 +661,15 @@ body {
     z-index: 100; }
   .footer-container .footer-content {
     display: flex;
-    flex-direction: column;
-    align-items: flex-start; }
+    flex-direction: column; }
     .footer-container .footer-content .footer-info {
       display: flex; }
       .footer-container .footer-content .footer-info .footer-icon {
         display: flex;
         align-items: center;
-        margin-right: 9px; }
+        margin-right: 6px; }
         .footer-container .footer-content .footer-info .footer-icon img {
-          max-width: 35px;
+          max-width: 23.3px;
           height: auto; }
       .footer-container .footer-content .footer-info .footer-text {
         display: flex;
@@ -588,55 +678,87 @@ body {
         .footer-container .footer-content .footer-info .footer-text .footer-subtitle {
           font-style: normal;
           font-weight: normal;
-          font-size: 20px;
-          line-height: 23px;
-          color: #FFFFFF;
-          margin-bottom: 12px; }
+          line-height: 15.3px;
+          color: #FFFFFF; }
         .footer-container .footer-content .footer-info .footer-text .footer-signature {
           font-style: normal;
           font-weight: normal;
-          font-size: 12px;
-          line-height: 14px;
+          font-size: 8px;
+          line-height: 9.3px;
           color: #FFFFFF;
           opacity: 0.4; }
     .footer-container .footer-content .footer-title {
       font-style: normal;
       font-weight: normal;
-      font-size: 30px;
-      line-height: 35px;
+      line-height: 23.3px;
       color: #FFFFFF;
-      opacity: 0.4;
-      margin-bottom: 35px; }
+      opacity: 0.4; }
     .footer-container .footer-content .footer-socials {
       display: flex;
       align-items: center; }
       .footer-container .footer-content .footer-socials .icon-vk {
-        padding: 12px 30px;
+        padding: 8px 20px;
         background-color: #3f52cd; }
         .footer-container .footer-content .footer-socials .icon-vk img {
-          max-width: 25px;
+          max-width: 16.6px;
           height: auto; }
       .footer-container .footer-content .footer-socials .icon-instagram {
-        padding: 10px 30px;
+        padding: 6.6px 20px;
         background-color: #3f52cd; }
         .footer-container .footer-content .footer-socials .icon-instagram img {
-          max-width: 21px;
+          max-width: 14px;
           height: auto; }
       .footer-container .footer-content .footer-socials .icon-whatsapp {
-        padding: 9px 30px 8px 30px;
+        padding: 6px 20px 5.3px 20px;
         background-color: #3F52CD; }
         .footer-container .footer-content .footer-socials .icon-whatsapp img {
-          max-width: 25px;
+          max-width: 16.6px;
           height: auto; }
       .footer-container .footer-content .footer-socials .icon {
-        margin-right: 9px; }
+        margin-right: 6px; }
+  @media (max-width: 767px) {
+    .footer-container {
+      flex-direction: column; } }
+  @media (max-width: 991px) {
+    .footer-container {
+      flex-direction: column;
+      align-items: center; }
+      .footer-container .footer-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 30px; }
+      .footer-container .footer-title {
+        font-size: 18px;
+        margin-bottom: 10px; }
+      .footer-container .footer-subtitle {
+        font-size: 10px;
+        margin-bottom: 10px; } }
+  @media (min-width: 992px) {
+    .footer-container .footer-content {
+      align-items: flex-start; }
+    .footer-container .footer-title {
+      font-size: 20px;
+      margin-bottom: 18px; }
+    .footer-container .footer-subtitle {
+      font-size: 13.3px;
+      margin-bottom: 10px; } }
+  @media (min-width: 1200px) {
+    .footer-container .footer-content {
+      align-items: flex-start; }
+    .footer-container .footer-title {
+      font-size: 20px;
+      margin-bottom: 23.3px; }
+    .footer-container .footer-subtitle {
+      font-size: 13.3px;
+      margin-bottom: 15px; } }
 
 .footer-map {
   background: url("../img/map-virsion-2.png") no-repeat 50% 50%;
   background-size: cover;
-  height: 300px;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center; }
   .footer-map-icon img {
-    max-width: 50px; }
+    max-width: 33.3px; }
